# AgentPreproxy

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: release.yml
docs/en/: README.md
docs/en/experiments/: experiment_report.md  index.html
docs/en/experiments/01_baseline/: README.md
docs/en/experiments/02_trigger_explore/: README.md
docs/en/experiments/03_repetition_gradient/: README.md
docs/en/experiments/04_false_positive/: README.md
docs/en/experiments/05_lora_training/: README.md
docs/en/experiments/06_tool_args_watchdog/: README.md
docs/en/experiments/07_logits_layer_probe/: README.md
docs/en/paper/: main_paper.md  mechanism_taxonomy.md  proxy_transparency.md  watchdog_implementation.md
docs/zh/: README.md
docs/zh/experiments/: index.html  实验总报告.md
docs/zh/experiments/01_基础能力测试/: README.md
docs/zh/experiments/02_触发探索/: README.md  run_trigger_explore.py  trigger_explore_20260508_200208.md  trigger_full_20260508_200208.json  (+1 more)
docs/zh/paper/: 主论文.md  代理_透明性.md  口播_逻辑死锁.md  实现_看门狗与计数Tag.md  机制分类.md
gui/: index.html  package-lock.json
gui/src/: main.ts  style.css
gui/src-tauri/: tauri.conf.json
gui/src-tauri/src/: lib.rs
src/agentpreproxy/: config.py  main.py
src/agentpreproxy/core/: intervention.py  repetition.py  state.py  tag.py  watchdog.py
src/agentpreproxy/debug/: hooks.py  inspector.py  logger.py
src/agentpreproxy/proxy/: escape.py  inject.py  server.py  stream.py
src/tests/: conftest.py  test_escape.py  test_repetition.py  test_stream.py  test_tag.py  test_watchdog.py
(+53 files in other folders)
